Add GFrame facility